# hashtable-in-c

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: generic_hashtable.h  hashtable-simple.c  hashtable-simple.h  hashtable.h  prime.c
tests/: main.c
